[package]
name = "succinct-circuit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21", features = ["tracing", "rt", "sync", "macros"] }
futures = "0.3.26"
uuid = {version = "1.5.0", features = ["v4", "fast-rng"]}